another try to fix the navbar collapsing issue (WIP)

--- a/vedaweb-frontend/src/css/NavBar.css
+++ b/vedaweb-frontend/src/css/NavBar.css
@@ -3,7 +3,7 @@
 #navbar {
     display: flex;
     flex-flow: row;
-    flex: 1 0 auto;
+    flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
     
@@ -14,7 +14,6 @@
     background-color: #fff;
     padding: .5rem;
     padding-left: 2rem;
-    padding-right: 2rem;
 
     border-bottom: 1px solid #b4b1ae;
 }
@@ -40,6 +39,14 @@ img.navbar-logo {
     color: rgba(0,0,0,0.65);
     border-color: rgba(0,0,0,0.5);
     line-height: 1.2;
+}
+
+.ant-menu-submenu-wrapper .ant-menu-submenu-title {
+    padding: 0;
+}
+
+.ant-menu-submenu-popup .submenu-title-wrapper {
+    padding-right: 0;
 }
 
 .ant-menu-horizontal > .ant-menu-item:hover,
